# ai-assignment-checker

./: .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  parser.py  pyproject.toml  test.ipynb  uv.lock.bak
app/: ARCHITECTURE.md  COMPONENTS.md  __init__.py  eval_schema_v1.json  http_app.py  logging_setup.py  main.py  roles.py  rubric_v1.md
app/api/: __init__.py  http_app.py  schemas.py
app/clients/: __init__.py  llm.py  openai_compatible.py  s3.py  stub.py  telegram.py
app/domain/: __init__.py  artifacts.py  assignment_criteria.py  contracts.py  dto.py  error_taxonomy.py  errors.py  evaluation_chain.py  evaluation_contracts.py  ids.py  lifecycle.py  models.py  normalization.py  scoring.py  telegram_settings.py
app/repositories/: __init__.py  postgres.py  sql_loader.py  stub.py
app/services/: __init__.py  bootstrap.py  runtime_settings.py
app/workers/: __init__.py  loop.py  roles.py  runner.py  telegram_polling_loop.py
data/: df.csv  test_data.json
db/migrations/: 000001_bootstrap.down.sql  000001_bootstrap.up.sql  000002_worker_checkpoints.down.sql  000002_worker_checkpoints.up.sql  000003_assignment_criteria_schema.down.sql  000003_assignment_criteria_schema.up.sql
scripts/: eval_baseline.ps1  init_test_data.py  smoke_local_uv.sh
tests/data/: assignment_multitask_sample.json  expected_scoring_ranges_multitask.json  submission_answers_multitask_sample.json
tests/integration/: api_seed.py  postgres_test_utils.py  test_admin_pages.py  test_api_endpoints.py  test_compose_contract.py  test_delivery_pipeline.py  test_evaluate_stage.py  test_normalization_fixture_entrypoints.py  test_normalize_worker_pipeline.py  test_runtime_smoke.py  (+5 more)
(+163 files in other folders)
