[project]
name = "ai-assignment-checker"
version = "0.1.0"
description = "Runtime and orchestration baseline for AI assignment checker"
requires-python = ">=3.12"
dependencies = [
  "asyncpg>=0.30.0,<1.0.0",
  "fastapi>=0.116.0,<1.0.0",
  "ulid-py>=1.1.0,<2.0.0",
  "python-multipart>=0.0.20,<1.0.0",
  "uvicorn>=0.35.0,<1.0.0",
]

[dependency-groups]
dev = [
  "basedpyright>=1.31.0,<2.0.0",
  "pytest>=8.4.0,<9.0.0",
  "pyyaml>=6.0.0,<7.0.0",
  "httpx>=0.28.0,<1.0.0",
]

[tool.basedpyright]
typeCheckingMode = "standard"
pythonVersion = "3.12"
include = ["app", "tests"]
exclude = [".venv", "**/__pycache__"]
reportMissingTypeStubs = "none"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "unit: fast tests without external dependencies",
  "integration: tests that validate runtime and orchestration contracts",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
